[package]
name = "zeco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
integer-encoding = "3.0"

[dependencies.zeco_derive]
path = "../zeco_derive"

[dev-dependencies]
trybuild = "1.0"

