[package]
name = "zeco_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# darling = "0.14"
deluxe = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
thiserror = "1.0"

[lib]
proc-macro = true

[dev-dependencies]
prettyplease = "0.1"